[gd_scene load_steps=11 format=4 uid="uid://bfidrrx06i5gh"]

[ext_resource type="Script" path="res://scenes/_debug/combat_level.gd" id="1_1dj55"]
[ext_resource type="Texture2D" uid="uid://byeocby82gq6u" path="res://assets/environment/slimeground.png" id="1_ce8m8"]
[ext_resource type="PackedScene" uid="uid://bb05mfdiart5b" path="res://scenes/_debug/debug_slime.tscn" id="2_1rfny"]
[ext_resource type="PackedScene" uid="uid://57dkghi1trmf" path="res://scenes/game/world/start.tscn" id="2_isy11"]
[ext_resource type="AudioStream" uid="uid://bofhyd5v8thnf" path="res://assets/sounds/Music/Rat Fight.mp3" id="3_rbklv"]
[ext_resource type="PackedScene" uid="uid://bdlisbe2q6yl2" path="res://scenes/game/characters/rat/rat.tscn" id="3_vjl3h"]
[ext_resource type="PackedScene" uid="uid://bfn22b5yol6ty" path="res://scenes/game/characters/slime/slime_boss.tscn" id="4_6oa1b"]
[ext_resource type="Texture2D" uid="uid://b6btthy6m7uqd" path="res://assets/environment/combatsewer.png" id="5_4wve1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ikic6"]
texture = ExtResource("1_ce8m8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 8, -8, 8, 8, -8, 8)
4:3/0/physics_layer_0/polygon_1/points = PackedVector2Array(8, 8, -8, 8, 8, -8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, -8, 8, 8, -8, 8)
5:3/0/physics_layer_0/polygon_1/points = PackedVector2Array(8, 8, -8, 8, -8, -8)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_y54n5"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_ikic6")

[node name="DebugCombat" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_1dj55")
next_level = ExtResource("2_1rfny")
level_theme = ExtResource("3_rbklv")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
visible = false
texture_filter = 3
position = Vector2(688, 813)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD//wAAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAJAAAAAAAEAAAAAAAJAAIAAAAEAAEAAAAJAAEAAAAEAAEAAAAIAAEAAAAEAAEAAAAHAAEAAAAEAAEAAAAGAAEAAAAEAAEAAAAFAAEAAAAEAAEAAAAEAAEAAAAEAAEAAAADAAEAAAAEAAEAAAACAAEAAAAEAAEAAAABAAEAAAAEAAEAAAAAAAEAAAAEAAEAAAD//wEAAAAEAAEAAAD//wIAAAAEAAEAAAAAAAIAAAAEAAEAAAABAAIAAAAEAAEAAAACAAIAAAAEAAEAAAADAAIAAAAEAAEAAAAEAAIAAAAEAAEAAAAFAAIAAAAEAAEAAAAGAAIAAAAEAAEAAAAHAAIAAAAEAAEAAAAIAAIAAAAEAAEAAAD//wMAAAAEAAEAAAD//wQAAAAEAAEAAAD//wUAAAAEAAEAAAD//wYAAAAEAAEAAAAAAAMAAAAEAAEAAAAAAAQAAAAEAAEAAAAAAAUAAAAEAAEAAAAAAAYAAAAEAAEAAAABAAMAAAAEAAEAAAABAAQAAAAEAAEAAAABAAUAAAAEAAEAAAABAAYAAAAEAAEAAAACAAMAAAAEAAEAAAACAAQAAAAEAAEAAAACAAUAAAAEAAEAAAACAAYAAAAEAAEAAAADAAMAAAAEAAEAAAADAAQAAAAEAAEAAAADAAUAAAAEAAEAAAADAAYAAAAEAAEAAAAEAAMAAAAEAAEAAAAEAAQAAAAEAAEAAAAEAAUAAAAEAAEAAAAEAAYAAAAEAAEAAAAFAAMAAAAEAAEAAAAFAAQAAAAEAAEAAAAFAAUAAAAEAAEAAAAFAAYAAAAEAAEAAAAGAAMAAAAEAAEAAAAGAAQAAAAEAAEAAAAGAAUAAAAEAAEAAAAGAAYAAAAEAAEAAAAHAAMAAAAEAAEAAAAHAAQAAAAEAAEAAAAHAAUAAAAEAAEAAAAHAAYAAAAEAAEAAAAIAAMAAAAEAAEAAAAIAAQAAAAEAAEAAAAIAAUAAAAEAAEAAAAIAAYAAAAEAAEAAAAJAAMAAAAEAAEAAAAJAAQAAAAEAAEAAAAJAAUAAAAEAAEAAAAJAAYAAAAEAAEAAAAKAAAAAAAEAAAAAAALAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAANAAAAAAAEAAAAAAAOAAAAAAAEAAAAAAAPAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAKAAEAAAAEAAEAAAAKAAIAAAAEAAEAAAAKAAMAAAAEAAEAAAAKAAQAAAAEAAEAAAAKAAUAAAAEAAEAAAAKAAYAAAAEAAEAAAALAAEAAAAEAAEAAAALAAIAAAAEAAEAAAALAAMAAAAEAAEAAAALAAQAAAAEAAEAAAALAAUAAAAEAAEAAAALAAYAAAAEAAEAAAAMAAEAAAAEAAEAAAAMAAIAAAAEAAEAAAAMAAMAAAAEAAEAAAAMAAQAAAAEAAEAAAAMAAUAAAAEAAEAAAAMAAYAAAAEAAEAAAANAAEAAAAEAAEAAAANAAIAAAAEAAEAAAANAAMAAAAEAAEAAAANAAQAAAAEAAEAAAANAAUAAAAEAAEAAAANAAYAAAAEAAEAAAAOAAEAAAAEAAEAAAAOAAIAAAAEAAEAAAAOAAMAAAAEAAEAAAAOAAQAAAAEAAEAAAAOAAUAAAAEAAEAAAAOAAYAAAAEAAEAAAAPAAEAAAAEAAEAAAAPAAIAAAAEAAEAAAAPAAMAAAAEAAEAAAAPAAQAAAAEAAEAAAAPAAUAAAAEAAEAAAAPAAYAAAAEAAEAAAAQAAEAAAAEAAEAAAAQAAIAAAAEAAEAAAAQAAMAAAAEAAEAAAAQAAQAAAAEAAEAAAAQAAUAAAAEAAEAAAAQAAYAAAAEAAEAAAARAAAAAAAEAAAAAAARAAEAAAAEAAEAAAASAAAAAAAEAAAAAAASAAEAAAAEAAEAAAATAAAAAAAEAAAAAAATAAEAAAAEAAEAAAAUAAAAAAAEAAAAAAAUAAEAAAAEAAEAAAAVAAAAAAAEAAAAAAAVAAEAAAAEAAEAAAAWAAAAAAAEAAAAAAAWAAEAAAAEAAEAAAAXAAAAAAAEAAAAAAAXAAEAAAAEAAEAAAAYAAAAAAAEAAAAAAAYAAEAAAAEAAEAAAAZAAAAAAAEAAAAAAAZAAEAAAAEAAAAAAD3/wAAAAAEAAAAAAD3/wEAAAAEAAEAAAD4/wAAAAAEAAAAAAD4/wEAAAAEAAEAAAD5/wAAAAAEAAAAAAD5/wEAAAAEAAEAAAD6/wAAAAAEAAAAAAD6/wEAAAAEAAEAAAD7/wAAAAAEAAAAAAD7/wEAAAAEAAEAAAD8/wAAAAAEAAAAAAD8/wEAAAAEAAEAAAD9/wAAAAAEAAAAAAD9/wEAAAAEAAEAAAD+/wAAAAAEAAAAAAD+/wEAAAAEAAEAAAD3/wIAAAAEAAEAAAD3/wMAAAAEAAEAAAD3/wQAAAAEAAEAAAD3/wUAAAAEAAEAAAD3/wYAAAAEAAEAAAD4/wIAAAAEAAEAAAD4/wMAAAAEAAEAAAD4/wQAAAAEAAEAAAD4/wUAAAAEAAEAAAD4/wYAAAAEAAEAAAD5/wIAAAAEAAEAAAD5/wMAAAAEAAEAAAD5/wQAAAAEAAEAAAD5/wUAAAAEAAEAAAD5/wYAAAAEAAEAAAD6/wIAAAAEAAEAAAD6/wMAAAAEAAEAAAD6/wQAAAAEAAEAAAD6/wUAAAAEAAEAAAD6/wYAAAAEAAEAAAD7/wIAAAAEAAEAAAD7/wMAAAAEAAEAAAD7/wQAAAAEAAEAAAD7/wUAAAAEAAEAAAD7/wYAAAAEAAEAAAD8/wIAAAAEAAEAAAD8/wMAAAAEAAEAAAD8/wQAAAAEAAEAAAD8/wUAAAAEAAEAAAD8/wYAAAAEAAEAAAD9/wIAAAAEAAEAAAD9/wMAAAAEAAEAAAD9/wQAAAAEAAEAAAD9/wUAAAAEAAEAAAD9/wYAAAAEAAEAAAD+/wIAAAAEAAEAAAD+/wMAAAAEAAEAAAD+/wQAAAAEAAEAAAD+/wUAAAAEAAEAAAD+/wYAAAAEAAEAAAARAAIAAAAEAAEAAAARAAMAAAAEAAEAAAARAAQAAAAEAAEAAAARAAUAAAAEAAEAAAARAAYAAAAEAAEAAAASAAIAAAAEAAEAAAASAAMAAAAEAAEAAAASAAQAAAAEAAEAAAASAAUAAAAEAAEAAAASAAYAAAAEAAEAAAATAAIAAAAEAAEAAAATAAMAAAAEAAEAAAATAAQAAAAEAAEAAAATAAUAAAAEAAEAAAATAAYAAAAEAAEAAAAUAAIAAAAEAAEAAAAUAAMAAAAEAAEAAAAUAAQAAAAEAAEAAAAUAAUAAAAEAAEAAAAUAAYAAAAEAAEAAAAVAAIAAAAEAAEAAAAVAAMAAAAEAAEAAAAVAAQAAAAEAAEAAAAVAAUAAAAEAAEAAAAVAAYAAAAEAAEAAAAWAAIAAAAEAAEAAAAWAAMAAAAEAAEAAAAWAAQAAAAEAAEAAAAWAAUAAAAEAAEAAAAWAAYAAAAEAAEAAAAXAAIAAAAEAAEAAAAXAAMAAAAEAAEAAAAXAAQAAAAEAAEAAAAXAAUAAAAEAAEAAAAXAAYAAAAEAAEAAAAYAAIAAAAEAAEAAAAYAAMAAAAEAAEAAAAYAAQAAAAEAAEAAAAYAAUAAAAEAAEAAAAYAAYAAAAEAAEAAAAZAAIAAAAEAAEAAAAZAAMAAAAEAAEAAAAZAAQAAAAEAAEAAAAZAAUAAAAEAAEAAAAZAAYAAAAEAAEAAAD3/wcAAAAEAAIAAAD4/wcAAAAEAAIAAAD5/wcAAAAEAAIAAAD6/wcAAAAEAAIAAAD7/wcAAAAEAAIAAAD8/wcAAAAEAAIAAAD9/wcAAAAEAAIAAAD+/wcAAAAEAAIAAAD//wcAAAAEAAIAAAAAAAcAAAAEAAIAAAABAAcAAAAEAAIAAAACAAcAAAAEAAIAAAADAAcAAAAEAAIAAAAEAAcAAAAEAAIAAAAFAAcAAAAEAAIAAAAGAAcAAAAEAAIAAAAHAAcAAAAEAAIAAAAIAAcAAAAEAAIAAAAJAAcAAAAEAAIAAAAKAAcAAAAEAAIAAAALAAcAAAAEAAIAAAAMAAcAAAAEAAIAAAANAAcAAAAEAAIAAAAOAAcAAAAEAAIAAAAPAAcAAAAEAAIAAAAQAAcAAAAEAAIAAAARAAcAAAAEAAIAAAASAAcAAAAEAAIAAAATAAcAAAAEAAIAAAAUAAcAAAAEAAIAAAAVAAcAAAAEAAIAAAAWAAcAAAAEAAIAAAAXAAcAAAAEAAIAAAAYAAcAAAAEAAIAAAAZAAcAAAAEAAIAAAAaAAcAAAAFAAIAAAAaAAAAAAAEAAAAAAAaAAEAAAAEAAAAAAAaAAIAAAAFAAEAAAAaAAMAAAAFAAEAAAAaAAQAAAAFAAEAAAAaAAUAAAAFAAEAAAAaAAYAAAAFAAEAAAD2/wcAAAADAAIAAAD2/wAAAAAEAAAAAAD2/wEAAAADAAEAAAD2/wIAAAADAAEAAAD2/wMAAAADAAEAAAD2/wQAAAADAAEAAAD2/wUAAAADAAEAAAD2/wYAAAADAAEAAADq/wAAAAAEAAAAAADr/wAAAAAEAAAAAADs/wAAAAAEAAAAAADt/wAAAAAEAAAAAADu/wAAAAAEAAAAAADv/wAAAAAEAAAAAADw/wAAAAAEAAAAAADx/wAAAAAEAAAAAADy/wAAAAAEAAAAAADz/wAAAAAEAAAAAAD0/wAAAAAEAAAAAAD1/wAAAAAEAAAAAAAbAAAAAAAEAAAAAAAbAAEAAAAEAAAAAAAcAAAAAAAEAAAAAAAcAAEAAAAEAAAAAAAdAAAAAAAEAAAAAAAdAAEAAAAEAAAAAAAeAAAAAAAEAAAAAAAeAAEAAAAEAAAAAAAfAAAAAAAEAAAAAAAfAAEAAAAEAAAAAAAgAAAAAAAEAAAAAAAgAAEAAAAEAAAAAAAhAAAAAAAEAAAAAAAhAAEAAAAEAAAAAAAiAAAAAAAEAAAAAAAiAAEAAAAEAAAAAAAjAAAAAAAEAAAAAAAjAAEAAAAEAAAAAAAkAAAAAAAEAAAAAAAkAAEAAAAEAAAAAAAlAAAAAAAEAAAAAAAlAAEAAAAEAAAAAAAmAAAAAAAEAAAAAAAmAAEAAAAEAAAAAAAnAAAAAAAEAAAAAAAnAAEAAAAEAAAAAAAoAAAAAAAEAAAAAAAoAAEAAAAEAAAAAAApAAAAAAAEAAAAAAApAAEAAAAEAAAAAAAqAAAAAAAEAAAAAAAqAAEAAAAEAAAAAAArAAAAAAAEAAAAAAArAAEAAAAEAAAAAAAsAAAAAAAEAAAAAAAsAAEAAAAEAAAAAAAfAPD/AAADAAEAAAAfAPH/AAADAAEAAAAfAPL/AAADAAEAAAAfAPP/AAADAAEAAAAfAPT/AAADAAEAAAAfAPX/AAADAAEAAAAfAPb/AAADAAEAAAAfAPf/AAADAAEAAAAfAPj/AAADAAEAAAAfAPn/AAADAAEAAAAfAPr/AAADAAEAAAAfAPv/AAADAAEAAAAfAPz/AAADAAEAAAAfAP3/AAADAAEAAAAfAP7/AAADAAEAAAAgAPD/AAADAAEAAAAgAPH/AAADAAEAAAAgAPL/AAADAAEAAAAgAPP/AAADAAEAAAAgAPT/AAADAAEAAAAgAPX/AAADAAEAAAAgAPb/AAADAAEAAAAgAPf/AAADAAEAAAAgAPj/AAADAAEAAAAgAPn/AAADAAEAAAAgAPr/AAADAAEAAAAgAPv/AAADAAEAAAAgAPz/AAADAAEAAAAgAP3/AAADAAEAAAAgAP7/AAADAAEAAAAhAPD/AAADAAEAAAAhAPH/AAADAAEAAAAhAPL/AAADAAEAAAAhAPP/AAADAAEAAAAhAPT/AAADAAEAAAAhAPX/AAADAAEAAAAhAPb/AAADAAEAAAAhAPf/AAADAAEAAAAhAPj/AAADAAEAAAAhAPn/AAADAAEAAAAhAPr/AAADAAEAAAAhAPv/AAADAAEAAAAhAPz/AAADAAEAAAAhAP3/AAADAAEAAAAhAP7/AAADAAEAAAAiAPD/AAADAAEAAAAiAPH/AAADAAEAAAAiAPL/AAADAAEAAAAiAPP/AAADAAEAAAAiAPT/AAADAAEAAAAiAPX/AAADAAEAAAAiAPb/AAADAAEAAAAiAPf/AAADAAEAAAAiAPj/AAADAAEAAAAiAPn/AAADAAEAAAAiAPr/AAADAAEAAAAiAPv/AAADAAEAAAAiAPz/AAADAAEAAAAiAP3/AAADAAEAAAAiAP7/AAADAAEAAAAfAP//AAADAAEAAAAgAP//AAADAAEAAAAhAP//AAADAAEAAAAiAP//AAADAAEAAADu//D/AAADAAEAAADu//H/AAADAAEAAADu//L/AAADAAEAAADu//P/AAADAAEAAADu//T/AAADAAEAAADu//X/AAADAAEAAADu//b/AAADAAEAAADu//f/AAADAAEAAADu//j/AAADAAEAAADu//n/AAADAAEAAADu//r/AAADAAEAAADu//v/AAADAAEAAADu//z/AAADAAEAAADu//3/AAADAAEAAADu//7/AAADAAEAAADu////AAADAAEAAADv//D/AAADAAEAAADv//H/AAADAAEAAADv//L/AAADAAEAAADv//P/AAADAAEAAADv//T/AAADAAEAAADv//X/AAADAAEAAADv//b/AAADAAEAAADv//f/AAADAAEAAADv//j/AAADAAEAAADv//n/AAADAAEAAADv//r/AAADAAEAAADv//v/AAADAAEAAADv//z/AAADAAEAAADv//3/AAADAAEAAADv//7/AAADAAEAAADv////AAADAAEAAADw//D/AAADAAEAAADw//H/AAADAAEAAADw//L/AAADAAEAAADw//P/AAADAAEAAADw//T/AAADAAEAAADw//X/AAADAAEAAADw//b/AAADAAEAAADw//f/AAADAAEAAADw//j/AAADAAEAAADw//n/AAADAAEAAADw//r/AAADAAEAAADw//v/AAADAAEAAADw//z/AAADAAEAAADw//3/AAADAAEAAADw//7/AAADAAEAAADw////AAADAAEAAADx//D/AAADAAEAAADx//H/AAADAAEAAADx//L/AAADAAEAAADx//P/AAADAAEAAADx//T/AAADAAEAAADx//X/AAADAAEAAADx//b/AAADAAEAAADx//f/AAADAAEAAADx//j/AAADAAEAAADx//n/AAADAAEAAADx//r/AAADAAEAAADx//v/AAADAAEAAADx//z/AAADAAEAAADx//3/AAADAAEAAADx//7/AAADAAEAAADx////AAADAAEAAADy//D/AAADAAEAAADy//H/AAADAAEAAADy//L/AAADAAEAAADy//P/AAADAAEAAADy//T/AAADAAEAAADy//X/AAADAAEAAADy//b/AAADAAEAAADy//f/AAADAAEAAADy//j/AAADAAEAAADy//n/AAADAAEAAADy//r/AAADAAEAAADy//v/AAADAAEAAADy//z/AAADAAEAAADy//3/AAADAAEAAADy//7/AAADAAEAAADy////AAADAAEAAADz//D/AAADAAEAAADz//H/AAADAAEAAADz//L/AAADAAEAAADz//P/AAADAAEAAADz//T/AAADAAEAAADz//X/AAADAAEAAADz//b/AAADAAEAAADz//f/AAADAAEAAADz//j/AAADAAEAAADz//n/AAADAAEAAADz//r/AAADAAEAAADz//v/AAADAAEAAADz//z/AAADAAEAAADz//3/AAADAAEAAADz//7/AAADAAEAAADz////AAADAAEAAAD0//D/AAADAAEAAAD0//H/AAADAAEAAAD0//L/AAADAAEAAAD0//P/AAADAAEAAAD0//T/AAADAAEAAAD0//X/AAADAAEAAAD0//b/AAADAAEAAAD0//f/AAADAAEAAAD0//j/AAADAAEAAAD0//n/AAADAAEAAAD0//r/AAADAAEAAAD0//v/AAADAAEAAAD0//z/AAADAAEAAAD0//3/AAADAAEAAAD0//7/AAADAAEAAAD0////AAADAAEAAAD1//D/AAADAAEAAAD1//H/AAADAAEAAAD1//L/AAADAAEAAAD1//P/AAADAAEAAAD1//T/AAADAAEAAAD1//X/AAADAAEAAAD1//b/AAADAAEAAAD1//f/AAADAAEAAAD1//j/AAADAAEAAAD1//n/AAADAAEAAAD1//r/AAADAAEAAAD1//v/AAADAAEAAAD1//z/AAADAAEAAAD1//3/AAADAAEAAAD1//7/AAADAAEAAAD1////AAADAAEAAAD2//D/AAAFAAEAAAD2//H/AAAFAAEAAAD2//L/AAAFAAEAAAD2//P/AAAFAAEAAAD2//T/AAAFAAEAAAD2//X/AAAFAAEAAAD2//b/AAAFAAEAAAD2//f/AAAFAAEAAAD2//j/AAAFAAEAAAD2//n/AAAFAAEAAAD2//r/AAAFAAEAAAD2//v/AAAFAAEAAAD2//z/AAAFAAEAAAD2//3/AAAFAAEAAAD2//7/AAAFAAEAAAD2////AAAFAAEAAAD3//D/AAAFAAEAAAD3//H/AAAFAAEAAAD3//L/AAAFAAEAAAD3//P/AAAFAAEAAAD3//T/AAAFAAEAAAD3//X/AAAFAAEAAAD3//b/AAAFAAEAAAD3//f/AAAFAAEAAAD3//j/AAAFAAEAAAD3//n/AAAFAAEAAAD3//r/AAAFAAEAAAD3//v/AAAFAAEAAAD3//z/AAAFAAEAAAD3//3/AAAFAAEAAAD3//7/AAAFAAEAAAD3////AAAFAAEAAAA=")
tile_set = SubResource("TileSet_y54n5")

[node name="Start" parent="." instance=ExtResource("2_isy11")]
position = Vector2(674, 729)

[node name="SlimeBoss" parent="." instance=ExtResource("4_6oa1b")]
position = Vector2(1332, 778)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 37.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="PlayerHealthbar" type="ProgressBar" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="BossHealthbar" type="ProgressBar" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 200.0
value = 200.0

[node name="Combatsewer" type="Sprite2D" parent="."]
z_index = -10
texture_filter = 3
position = Vector2(1032, 605)
scale = Vector2(3, 3)
texture = ExtResource("5_4wve1")

[node name="Rat" parent="." instance=ExtResource("3_vjl3h")]
position = Vector2(939, 735)

[node name="Camera2D" parent="Rat" index="5"]
limit_left = 400
limit_right = 1700

[connection signal="hit_player" from="SlimeBoss" to="." method="_on_slime_boss_hit_player"]
[connection signal="hit_boss" from="Rat" to="." method="_on_rat_hit_boss"]

[editable path="Rat"]
